<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_margin"
    tools:context=".LoginFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/login_field_label_width"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:text="@string/server_host_label"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/server_host_edit_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/login_field_label_width"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:text="@string/server_port_label"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/server_port_edit_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/login_field_label_width"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:text="@string/user_name_label"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_name_edit_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/login_field_label_width"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:text="@string/password_label"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/password_edit_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/login_field_label_width"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:text="@string/first_name_login_label"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/first_name_edit_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/login_field_label_width"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:text="@string/last_name_login_label"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/last_name_edit_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/login_field_label_width"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:text="@string/email_label"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_edit_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/login_field_label_width"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:text="@string/gender_login_label"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/gender_radio_group">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/male_title"
                android:id="@+id/male_radio_button"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/female_title"
                android:id="@+id/female_radio_button"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_button_text"
            android:id="@+id/sign_in_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button_text"
            android:id="@+id/register_button"/>
    </LinearLayout>
</LinearLayout>

