<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/settings_big_item_padding"
        android:background="@color/settingsItemBackground"
        android:layout_marginBottom="@dimen/settings_big_item_bottom_spacing">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/settings_title_size"
                android:text="@string/life_story_lines_label"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/settings_subtitle_size"
                android:text="@string/show_life_story_lines_label"/>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/life_story_line_spinner"
            android:layout_width="wrap_content"
            android:gravity="right"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spinner_title_spacing">
        </Spinner>
        <Switch
            android:id="@+id/life_story_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/switch_right_spacing"
            android:gravity="right"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/settings_big_item_padding"
        android:background="@color/settingsItemBackground"
        android:layout_marginBottom="@dimen/settings_big_item_bottom_spacing">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/settings_title_size"
                android:text="@string/family_tree_lines_label"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/settings_subtitle_size"
                android:text="@string/show_family_tree_lines_label"/>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/family_tree_line_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/spinner_title_spacing">
        </Spinner>
        <Switch
            android:id="@+id/family_tree_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/switch_right_spacing"
            android:gravity="right"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/settings_big_item_padding"
        android:background="@color/settingsItemBackground"
        android:layout_marginBottom="@dimen/settings_big_item_bottom_spacing">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/settings_title_size"
                android:text="@string/spouse_lines_label"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/settings_subtitle_size"
                android:text="@string/show_spouse_explanation"/>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/spouse_line_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/spinner_title_spacing">
        </Spinner>
        <Switch
            android:id="@+id/spouse_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/switch_right_spacing"
            android:gravity="right"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/settings_big_item_padding"
        android:background="@color/settingsItemBackground"
        android:layout_marginBottom="@dimen/settings_big_item_bottom_spacing">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/settings_title_size"
                android:text="@string/map_type_label"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/settings_subtitle_size"
                android:text="@string/map_type_explanation"/>
        </LinearLayout>
        <Spinner
            android:id="@+id/map_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/spinner_title_spacing"/>
        <!--options go here-->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/re_sync_data_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/settings_big_item_padding"
        android:background="@color/settingsItemBackground"
        android:layout_marginBottom="@dimen/settings_big_item_bottom_spacing">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/settings_title_size"
                android:text="@string/re_sync_data_label"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/settings_subtitle_size"
                android:text="@string/re_sync_data_explanation"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/settings_big_item_padding"
        android:background="@color/settingsItemBackground"
        android:layout_marginBottom="@dimen/settings_big_item_bottom_spacing">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/settings_title_size"
                android:text="@string/logout_label"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/settings_subtitle_size"
                android:text="@string/logout_explanation"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>