<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PersonActivity"
    android:layout_margin="@dimen/activity_margin">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/person_big_item_padding"
                android:background="@color/settingsItemBackground"
                android:layout_marginBottom="@dimen/person_big_item_bottom_spacing">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/person_first_name_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/settings_title_size"
                        tools:text="Firstname"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/settings_subtitle_size"
                        android:text="@string/first_name_label"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/person_big_item_padding"
                android:background="@color/settingsItemBackground"
                android:layout_marginBottom="@dimen/person_big_item_bottom_spacing">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/person_last_name_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/settings_title_size"
                        tools:text="Lastname"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/settings_subtitle_size"
                        android:text="@string/last_name_label"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/person_big_item_padding"
                android:background="@color/settingsItemBackground"
                android:layout_marginBottom="@dimen/person_big_item_bottom_spacing">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/person_gender_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/settings_title_size"
                        tools:text="Male"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/settings_subtitle_size"
                        android:text="@string/gender_label"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/life_events_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/life_events_arrow_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_arrow_drop_up_black_24dp"
                    android:layout_marginEnd="@dimen/category_icon_spacing"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/category_title_size"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="@string/life_events_label"/>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/life_events_recycler_view"
                android:scrollbars="none"
                android:nestedScrollingEnabled="false"
                android:layout_marginEnd="@dimen/person_recycler_view_margin"
                android:layout_marginStart="@dimen/person_recycler_view_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/family_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/family_arrow_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_arrow_drop_up_black_24dp"
                    android:layout_marginEnd="@dimen/category_icon_spacing"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/category_title_size"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="@string/family_label"/>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/family_recycler_view"
                android:scrollbars="none"
                android:layout_marginEnd="@dimen/person_recycler_view_margin"
                android:layout_marginStart="@dimen/person_recycler_view_margin"
                android:nestedScrollingEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>